--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -41,6 +41,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "r5AigNoU3w2g"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Aa536pRY7Eq5"
@@ -48,6 +59,15 @@
       "source": [
         "## Importing the dataset"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8O4_uCvf9KuT"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
