--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "r5AigNoU3w2g"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,11 +62,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dataset = pd.read_csv(\"breast_cancer.csv\")\n",
+        "X = dataset.iloc[:, 1:-1].values\n",
+        "y = dataset.iloc[:, -1].values"
+      ],
       "metadata": {
         "id": "8O4_uCvf9KuT"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -77,6 +81,18 @@
       "source": [
         "## Splitting the dataset into the Training set and Test set"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size= 0.2, random_state= 0)"
+      ],
+      "metadata": {
+        "id": "1sonSZVHDttS"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
