Computing the accuracy with k-Fold Cross Validation

--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -173,11 +173,11 @@
         "print(cm)"
       ],
       "metadata": {
-        "id": "__ftB5z8zBs-",
-        "outputId": "dd8bee2c-7570-4d5c-d03a-185da4656e2b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "__ftB5z8zBs-",
+        "outputId": "dd8bee2c-7570-4d5c-d03a-185da4656e2b"
       },
       "execution_count": 12,
       "outputs": [
@@ -192,12 +192,64 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Accuracy\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "print(accuracy_score(y_test, y_pred))"
+      ],
+      "metadata": {
+        "id": "jBq9fZX65olX",
+        "outputId": "da74b9c3-775f-4a13-b769-5ab4e333f423",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9562043795620438\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "kMErnLnu8hmb"
       },
       "source": [
         "## Computing the accuracy with k-Fold Cross Validation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import cross_val_score\n",
+        "accuracies = cross_val_score(estimator = classifier, X = X_train, y = y_train, cv = 10)\n",
+        "print(\"Accuracy: {:0.2f} %\".format(accuracies.mean()*100))\n",
+        "print(\"Standard Deviation: {:0.2f} %\".format(accuracies.std()*100))"
+      ],
+      "metadata": {
+        "id": "t7njo2N351uv",
+        "outputId": "bf52f2ad-d3ac-47d3-b6b0-e9f9a7506e25",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 96.70 %\n",
+            "Standard Deviation: 1.97 %\n"
+          ]
+        }
       ]
     }
   ]
